--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PORT=5000
 DB_NAME=users_task4
 DB_USER=postgres
 DB_PASSWORD=root
-DB_HOST=localhost
-DB_PORT=5432
+DB_HOST=127.0.0.1
+DB_PORT=5050
 SECRET_KEY=random_secret_key123
