--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-port=5000
-dbname=users_task4
-dbuser=postgres
-dbpassword=root
-dbhost=127.0.0.1
-dbport=5432
-sekretkey=random_secret_key123
+PORT=5000
+DB_NAME=users_task4
+DB_USER=postgres
+DB_PASSWORD=root
+DB_HOST=127.0.0.1
+DB_PORT=5432
+SECRET_KEY=random_secret_key123
